Fixed alignment of Resume content with a responsive design. Finished and implemented DownloadButton for Certificate components. Added CSS to handle coloring and any text-aligning necessary to accomplish these.

--- a/src/index.css
+++ b/src/index.css
@@ -567,13 +567,12 @@ body {
   padding-bottom: 1rem;
 }
 
-#resume h3 {
-  text-align: left;
+#resume p {
+  color: #838C95
 }
 
-#resume p {
+.work-experience-description, .certificate-description, .education-description {
   text-align: left;
-  color: #838C95
 }
 
 #resume h4 {
@@ -584,11 +583,6 @@ body {
 .work-experience {
   width: 100%;
   padding-bottom: 1rem;
-}
-
-#resume h3,
-#resume p {
-  text-align: left;
 }
 
 #work-experience ul {
@@ -608,6 +602,12 @@ body {
   font-weight: 500;
 }
 
+.button-certificate a {
+  color: white;
+  text-decoration: unset;
+  padding-left: 1rem;
+}
+
 
 /* Extra small devices (phones, less than 576px) */
 /* Styles applied here will affect devices with a maximum width of 575.98px */
@@ -621,6 +621,10 @@ body {
     display: inline-block;
     height: 60%;
     padding-bottom: 20px;
+  }
+
+  #resume h3, .work-experience-position, .certificate-subtitle, .education-subtitle {
+    text-align: center;
   }
 
   #certificate-section-content {
@@ -652,6 +656,10 @@ body {
     padding-bottom: 20px;
   }
 
+  #resume h3, .work-experience-position, .certificate-subtitle, .education-subtitle {
+    text-align: center;
+  }
+
   #certificate-section-content {
     display: flex;
     flex-direction: column;
@@ -679,6 +687,10 @@ body {
     display: inline-block;
     height: 60%;
     padding-bottom: 20px;
+  }
+
+  #resume h3, .work-experience-position, .certificate-subtitle, .education-subtitle {
+    text-align: center;
   }
 
   #certificate-section-content {
@@ -709,6 +721,14 @@ body {
     height: 0%;
   }
 
+  #resume h3 {
+    text-align: left;
+  }
+
+  .certificate-subtitle, .work-experience-position, .education-subtitle {
+    text-align: left;
+  }
+
   #certificate-section-content {
     display: flex;
     flex-direction: column;
@@ -722,6 +742,11 @@ body {
     /* Add some spacing between bullet point and text */
     font-size: 1.5em;
   }
+
+  .certificate-button {
+    text-align: left;
+  }
+
 }
 
 /* Extra large devices (large desktops, 1200px and up) */
@@ -737,10 +762,22 @@ body {
     height: 0%;
   }
 
+  #resume h3 {
+    text-align: left;
+  }
+
+  .certificate-subtitle, .work-experience-position, .education-subtitle {
+    text-align: left;
+  }
+
   #certificate-section-content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+  }
+
+  .certificate-button {
+    text-align: left;
   }
 
   .bullet-point::before {
